--- a/edit.html
+++ b/edit.html
@@ -5,7 +5,7 @@
 <html>
   <head>
     <title>
-      Northwest Roses Vintage
+      Northwest Rustbuckets
     </title>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>    
     <script src="https://unpkg.com/vue@next"></script>
@@ -15,7 +15,7 @@
     <div>
       <div class="header">
 	<h1>
-	  Vintage Roses are Wilty
+	  Vintage Rust
 	</h1>
       </div>
       <div class="body" id="posts">
