--- a/edit.html
+++ b/edit.html
@@ -36,6 +36,6 @@
       <div class="footer">
       </div>
     </div>
-    <script type="text/javascript" src="/v.js"></script>
+    <script type="text/javascript" src="/main.js"></script>
   </body>
 </html>
