--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
       <div class="footer"></div>
     </div>
-    <script type="text/javascript" src="/v.js"></script>
+    <script type="text/javascript" src="/main.js"></script>
     <script>
       function toggleBodyOverflow(){
 	  $('body').toggleClass('has-modal');
